# mdbook-validator

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPROVEMENT_PLAN.md  LICENSE  README.md  TROUBLESHOOTING.md  clippy.toml  deny.toml  mdbook-validator-plan.md  rustfmt.toml
.beads/: .gitignore  config.yaml  issues.jsonl
.cargo-husky/hooks/: pre-commit  pre-push
.config/: nextest.toml
.github/workflows/: ci.yml
docs/: analysis-documentation-validation-landscape.md
src/: command.rs  config.rs  container.rs  dependency.rs  docker.rs  error.rs  host_validator.rs  lib.rs  main.rs  parser.rs  preprocessor.rs  transpiler.rs  validator.rs
tests/: bash_exec_validator_tests.rs  command_runner_tests.rs  config_tests.rs  container_image_tests.rs  container_tests.rs  docker_mock_tests.rs  e2e_tests.rs  error_tests.rs  host_validator_tests.rs  integration_tests.rs  osquery_config_validator_tests.rs  osquery_validator_tests.rs  parser_tests.rs  preprocessor_edge_cases.rs  preprocessor_error_paths.rs  prototype_test.rs  python_validator_tests.rs  shellcheck_validator_tests.rs  sqlite_validator_tests.rs  transpiler_tests.rs  validator_input_tests.rs  validator_tests.rs
tests/fixtures/: echo_validator.sh  exit_code_validator.sh
tests/fixtures/e2e-book/: book.toml
tests/fixtures/e2e-book/src/: SUMMARY.md  bash-examples.md  invalid-python.md  invalid-shellcheck.md  valid-examples.md
tests/fixtures/test-book/: book.toml
tests/fixtures/test-book/src/: chapter_1.md
tests/fixtures/test-book/validators/: validate-osquery-config.sh  validate-osquery.sh  validate-shellcheck.sh
validators/: bash-exec.sh  test-validate-typescript.sh  typescript-exec.sh  validate-bash-exec.sh  validate-osquery-config.sh  validate-osquery.sh  validate-python.sh  validate-sqlite.sh  validate-template.sh  validate-typescript.sh
