[package]
name = "mdbook-validator"
version = "1.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "An mdBook preprocessor that validates code blocks using Docker containers"
license = "Apache-2.0"
authors = ["Ryan Stortz <ryan@withzombies.com>"]
repository = "https://github.com/withzombies/mdbook-validator"
homepage = "https://github.com/withzombies/mdbook-validator"
readme = "README.md"
keywords = ["mdbook", "validation", "documentation", "docker", "testing"]
categories = ["development-tools::build-utils", "development-tools::testing"]

[dependencies]
mdbook-preprocessor = "0.5"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.13"
testcontainers = "0.23"
bollard = "0.18"
tokio = { version = "1", features = ["rt", "macros", "io-util"] }
futures-util = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.5"

[dev-dependencies]
cargo-husky = { version = "1.5", features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"] }
mockall = "0.13"
tempfile = "3"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

# Panic-free code
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# String handling strictness
str_to_string = "deny"
inefficient_to_string = "deny"
implicit_clone = "deny"
redundant_clone = "deny"
clone_on_ref_ptr = "deny"

# Additional strictness
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
unimplemented = "deny"
wildcard_imports = "deny"

[lints.rust]
unsafe_code = "deny"
